	-Map Collisions

//Juri Kiin 9:31 PM 4/20/16
	- Finished combat mechanics.
	- Fixed Enemy Collision
	- Added an attack speed factor in the Enemy Creation App.
	- Added enemies into test map

// Juri Kiin 9:48 AM 5/2/16
	- Added a class system into the game for the player to choose before they start the game.
	- This affects the stats that they start out with

// Dustin Knowlton 11:55AM 5/2/2016
	-Dialogue method still progressing, currently displaying line permanently
	-BUG FOUND: armor or something of the like is causing the player to gain health from damage instead of losing it.

//James Friedenberg 8:40 PM 5/3/2015
	-Created and loaded in the Class System UI
	-Suggested fix for class not working: Add parameters to the player class for class changes instead of making a seperate class for the class system

//Juri Kiin 4:28 PM	5/4/16
	- Fixed class system.
	- Placed enemies in different places in level
	- improved attack system.

//Dustin Knowlton 4:47PM 5/4/16
	- Dialogue functioning out of/before combat, but only for one line.

//James Friedenberg 1:58 AM 5/6/2016
	- Cleaned up code and comments
	- Solution for collisions found: death by falling off map when player collides with wall
	- Found a solution to font issues: http://dylanwilson.net/bmfont-rendering-with-monogame-extended

//Juri Kiin 4:31 PM 5/6/16
	- Fixed collisions so that if you reach the boundary of the level, reset the level (but not the health!)

//James Friedenberg 4:51 5/6/2016
	- Added protag vs antag choice UI for end of the game
	- Installed MonoGame.Extended package to the project for font installation

//Dustin Knowlton 6:05PM 5/6/2016
	-Oh god why am I still here
	-Dialogue text should be edited and formatted. Please read it so we can catch any errors and/or writing you don't like. 
	-Dialogue doc is in /bin/WindowsGL/Debug/Dialogue.txt
	-Started basis for dialogue functions, will get to that soon. Gonna be a lot of changes all over.